--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ position: absolute;
 <div class="card">
 <h1>Hey Roshni 💕</h1>
 <p>
-From my heart to this screen…<br>
+I know its stupid of me to ask you this but…<br>
 Will you be my Valentine? 🌹
 </p>
 <button id="yes" onclick="sayYes()">Yes 💖</button>
@@ -87,4 +87,5 @@ button.style.top = y + "px";
 }
 </script>
 </body>
+
 </html>
